objects/PMC_DH_IntegrationSettings__mdt.object
<CustomObject>
    <description>Configuration for Digital Hub ( Mosaic Direct ) to store all the API related configurations</description>
    <fields>
        <fullName>PMC_DH_Accept__c</fullName>
        <label>Accept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Authorization__c</fullName>
        <label>Authorization</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CachedTime__c</fullName>
        <inlineHelpText>Maximum allowed cached time : 172800 secs</inlineHelpText>
        <label>Cached Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CalloutMethod__c</fullName>
        <label>Callout Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_ClientId__c</fullName>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_EndpointURL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_RetryCount__c</fullName>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_RetryTimeout__c</fullName>
        <inlineHelpText>The time is in seconds</inlineHelpText>
        <label>Retry Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Digital Hub Integration</label>
    <pluralLabel>Digital Hub Integrations</pluralLabel>
</CustomObject>